--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>Slide 1
+				<input type='text' id='foo'><div onclick='$("#foo").focus();'>click</div></section>
 				<section>Slide 2</section>
 			</div>
 		</div>
