--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 	</head>
 	<body>
-	<a href="/Presentaciones-HTML/template/out/template.html">Muestra</a>	
+	<a href="/Presentaciones-HTML/presentacion-seguridad/out/presentacion-seguridad.html">Presentación de Seguridad Informática</a>	
 	</body>
 </html>
