--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -9563,7 +9563,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div created="20190908174420262" list="[[1. Sobre el contenido]] [[Tabla de contenidos]] [[Contar en binario]] [[Pasar de binario a decimal]] [[Pasar de decimal a binario]]" modified="20190908175400944" title="$:/StoryList">
+<div list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9579,7 +9579,7 @@ margin:0 auto;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///Users/david/Documents/GitHub/davidlms.github.io/redeslocales/apuntes.html&quot;
+            &quot;text&quot;: &quot;file:///private/var/mobile/Library/Mobile%20Documents/iCloud~com~cjhunt~quine/Documents/apuntes/apuntes.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9599,7 +9599,7 @@ margin:0 auto;
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Users/david/Documents/GitHub/davidlms.github.io/redeslocales/apuntes.html&quot;
+            &quot;text&quot;: &quot;/private/var/mobile/Library/Mobile%20Documents/iCloud~com~cjhunt~quine/Documents/apuntes/apuntes.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9611,15 +9611,15 @@ margin:0 auto;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;834&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1194&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;es&quot;
+            &quot;text&quot;: &quot;es-ES&quot;
         }
     }
 }</pre>
@@ -12352,11 +12352,13 @@ select {
 <div created="20190907235243836" modified="20190908000301091" title="$:/themes/tiddlywiki/vanilla/settings/fontfamily">
 <pre>-apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;,opendyslexicregular</pre>
 </div>
-<div author="David Romero" created="20190907220243618" modified="20190908163405678" tags="[[Tabla de contenidos]]" title="1. Sobre el contenido">
+<div author="David Romero" created="20190907220243618" modified="20190908201011554" tags="[[Tabla de contenidos]]" title="1. Sobre el contenido">
 <pre>Bienvenidos a estos apuntes en permanente construcción, espero que te ayuden en tu camino hacia el aprendizaje del funcionamiento de las Redes Locales.
 
 Eres libre de descargar tu propia versión de esta página, personalizarla a tu gusto y volver a publicarla, solo debes tener en cuenta la licencia:
 [[David Romero BY-SA|https://creativecommons.org/licenses/by-sa/3.0/es/]], manteniendo el enlace original a [[https://davidlms.github.io/|https://davidlms.github.io/]]
+
+prueba
 </pre>
 </div>
 <div author="David Romero" created="20190907222203549" modified="20190908163133212" tags="[[Tabla de contenidos]]" title="2. Sistema binario">
