Añadidos apuntes de servicios en red

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Redes Locales</h2>
-							<p>En el siguiente enlace puedes encontrar algunos apuntes con actividades interactivas para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos.</p>
+							<p>En el siguiente enlace puedes encontrar algunos apuntes del módulo con actividades interactivas para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos.</p>
 							<ul class="actions stacked">
 								<li><a href="redeslocales/apuntes.html" class="button">Acceder</a></li>
 							</ul>
@@ -45,19 +45,19 @@
 						</div>
 					</section>
 
-				<!-- Three 
+
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Servicios en Red</h2>
+							<p>En el siguiente enlace puedes encontrar algunos apuntes del módulo para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos..</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a hhref="serviciosenred/apuntes.html" class="button">Acceder</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
 						</div>
-					</section> -->
+					</section> -
 
 				<!-- Four 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
@@ -332,8 +332,8 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://twitter.com/LMS_David_RS" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<!--<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/DavidLMS" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>-->
 								<li><a href="mailto:lms.davidromero@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
