Actualizados apuntes servicios

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<h2>Servicios en Red</h2>
 							<p>En el siguiente enlace puedes encontrar algunos apuntes del módulo para trabajar con el alumnado. Están bajo una licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/es/">CC BY-SA</a>, por lo que eres libre de modificarlos y volver a publicarlos..</p>
 							<ul class="actions stacked">
-								<li><a hhref="serviciosenred/apuntes.html" class="button">Acceder</a></li>
+								<li><a href="serviciosenred/apuntes.html" class="button">Acceder</a></li>
 							</ul>
 						</div>
 						<div class="image">
