Actualizados apuntes redes y servicios

--- a/serviciosenred/apuntes.html
+++ b/serviciosenred/apuntes.html
@@ -9582,8 +9582,8 @@ margin:0 auto;
 <div created="20190907221955795" modified="20190907234624147" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Shadows</pre>
 </div>
-<div created="20190907220257393" modified="20190908174417494" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20190907220257393" modified="20191012075626451" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20190922202411851" modified="20190922202510009" title="$:/state/toc/Tabla de contenidos-2. Acceso remoto-115813501">
 <pre>open</pre>
@@ -9633,7 +9633,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div created="20191011213528139" list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191011213528139" title="$:/StoryList">
+<div created="20191012072042725" list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191012075731814" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12662,7 +12662,7 @@ Para seguir aprendiendo y practicar, puedes acceder a los siguientes ''recursos'
 <div author="David Romero" created="20191011213548435" modified="20191011213617676" tags="[[3. Servicios de transferencia de ficheros]]" title="FTP">
 <pre></pre>
 </div>
-<div author="David Romero" created="20191011213846093" modified="20191011213859719" tags="FTP" title="FTPS">
+<div author="David Romero" created="20191011213846093" modified="20191012075727229" tags="FTP" title="FTPS">
 <pre></pre>
 </div>
 <div created="20190907220239941" modified="20190908163142634" tags="[[3. Protocolos]]" title="IP">
@@ -12869,8 +12869,8 @@ Nos pedirá el usuario y la contraseña. ''Recuerda'' que ambas credenciales se 
 
 </pre>
 </div>
-<div author="David Romero" created="20191011213812800" modified="20191011213825987" tags="FTP" title="TFTP">
-<pre></pre>
+<div author="David Romero" created="20191011213812800" modified="20191012075735593" tags="FTP" title="TFTP">
+<pre>[[UDP|https://davidlms.github.io/redeslocales/apuntes.html#UDP]]</pre>
 </div>
 <div color="#448fdc" created="20190908163731313" modified="20190908163737220" title="Vídeo explicativo">
 <pre></pre>
