--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -10108,8 +10108,8 @@ margin:0 auto;
 <div created="20191012073752702" modified="20191012073800963" title="$:/state/tab--1760527228">
 <pre>$:/core/ui/TiddlerInfo/Tools</pre>
 </div>
-<div created="20190907234521526" modified="20191012073432081" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20190907234521526" modified="20191013062744412" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/StoryView</pre>
 </div>
 <div created="20190907220431965" modified="20190929212355804" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -10117,8 +10117,8 @@ margin:0 auto;
 <div created="20190907220440377" modified="20190907220442973" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Stylesheets</pre>
 </div>
-<div created="20190907220449851" modified="20191012073433253" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20190907220449851" modified="20191013062743431" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20190907221955795" modified="20190907234624147" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Shadows</pre>
@@ -10210,7 +10210,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div created="20191012081134613" list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191012081136829" title="$:/StoryList">
+<div created="20191013062740205" list="$:/ControlPanel [[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191013062740205" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13761,8 +13761,8 @@ select {
 <div created="20190907235243836" modified="20190908000301091" title="$:/themes/tiddlywiki/vanilla/settings/fontfamily">
 <pre>-apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;,opendyslexicregular</pre>
 </div>
-<div created="20191012073421708" modified="20191012073430241" title="$:/view">
-<pre>classic</pre>
+<div created="20191012073421708" modified="20191013062745489" title="$:/view">
+<pre>pop</pre>
 </div>
 <div author="David Romero" created="20190907220243618" modified="20190908201755122" tags="[[Tabla de contenidos]]" title="1. Sobre el contenido">
 <pre>Bienvenidos a estos apuntes en permanente construcción, espero que te ayuden en tu camino hacia el aprendizaje del funcionamiento de las Redes Locales.
