--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -505,6 +505,8 @@ Error message and password prompt
 
 <li>9. Prevención de Riesgos Laborales</li>
 
+<li>Apuntes de Redes Locales</li>
+
 <li>Contar en binario</li>
 
 <li>Contar en binario - Ejercicio interactivo</li>
@@ -9807,8 +9809,9 @@ margin:0 auto;
     }
 }</pre>
 </div>
-<div created="20190907220144667" modified="20190908163505967" title="$:/DefaultTiddlers">
-<pre>[[1. Sobre el contenido]]
+<div created="20190907220144667" modified="20191013072507129" title="$:/DefaultTiddlers">
+<pre>[[Apuntes de Redes Locales]]
+[[1. Sobre el contenido]]
 [[Tabla de contenidos]]
 </pre>
 </div>
@@ -10114,7 +10117,7 @@ margin:0 auto;
 <div created="20190907222108111" modified="20190907232538812" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
-<div created="20191012073403878" modified="20191013065221258" title="$:/state/sidebar">
+<div created="20191012073403878" modified="20191013072618399" title="$:/state/sidebar">
 <pre>no</pre>
 </div>
 <div created="20191012073752702" modified="20191012073800963" title="$:/state/tab--1760527228">
@@ -10129,14 +10132,14 @@ margin:0 auto;
 <div created="20190907220440377" modified="20190907220442973" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Stylesheets</pre>
 </div>
-<div created="20190907220449851" modified="20191013065200999" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20190907220449851" modified="20191013072457002" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20190907221955795" modified="20190907234624147" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Shadows</pre>
 </div>
-<div created="20190907220257393" modified="20191013065145852" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20190907220257393" modified="20191013072606471" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20191012073346519" modified="20191012073415704" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10222,7 +10225,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div created="20191013065115773" list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191013065149845" title="$:/StoryList">
+<div created="20191013072607443" list="[[Apuntes de Redes Locales]] [[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191013072607443" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20191013064639654" list="$:/core/ui/MoreSideBar/All $:/core/ui/MoreSideBar/Recent $:/core/ui/MoreSideBar/Tags $:/core/ui/MoreSideBar/Missing $:/core/ui/MoreSideBar/Drafts $:/core/ui/MoreSideBar/Orphans $:/core/ui/MoreSideBar/Types $:/core/ui/MoreSideBar/System $:/core/ui/MoreSideBar/Shadows $:/core/ui/MoreSideBar/Explorer $:/core/ui/MoreSideBar/Plugins" modified="20191013064639654" title="$:/tags/MoreSideBar">
@@ -13829,6 +13832,9 @@ Eres libre de descargar tu propia versión de esta página, personalizarla a tu 
 </div>
 <div author="David Romero" created="20191012070817119" modified="20191012070833494" tags="[[Tabla de contenidos]]" title="9. Prevención de Riesgos Laborales">
 <pre></pre>
+</div>
+<div author="David Romero" created="20191013072428171" modified="20191013072628623" tags="" title="Apuntes de Redes Locales">
+<pre>Una alternativa poco técnica y poco profesional</pre>
 </div>
 <div author="David Romero" created="20190907225922132" modified="20191012070408247" tags="[[Sistema binario]]" title="Contar en binario">
 <pre>''Contar en binario'' es tan sencillo como contar en decimal. La ''única diferencia'' es, que en lugar de tener ''diez'' números (0, 1, 2, 3, 4, 5, 6, 7, 8 y 9), tenemos solamente ''dos'' (0 y 1). 
