--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -10185,8 +10185,8 @@ margin:0 auto;
 <div created="20190907222108111" modified="20190907232538812" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
-<div created="20191012073403878" modified="20191013110751956" title="$:/state/sidebar">
-<pre>yes</pre>
+<div created="20191012073403878" modified="20191013121029676" title="$:/state/sidebar">
+<pre>no</pre>
 </div>
 <div created="20191012073752702" modified="20191012073800963" title="$:/state/tab--1760527228">
 <pre>$:/core/ui/TiddlerInfo/Tools</pre>
@@ -10293,7 +10293,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div created="20191013110733668" list="[[Normas y asociaciones de estándares]] ONT Módem [[Router o enrutador]] [[Access Point (AP) o punto de acceso]] [[Switch o conmutador]] [[Hub o concentrador]] [[Software de aplicación]] [[Sistema operativo]] [[Interfaz de red]] [[Dispositivos intermediarios]] [[Medios de transmisión]] [[Dispositivos finales]] Mixta Estrella Bus Árbol [[Doble anillo]] Anillo [[Totalmente conexa]] Malla Inalámbricas [[Basadas en fibra óptica]] [[Basadas en cobre]] WAN MAN LAN PAN [[Según su topología]] [[Según su medio de transmisión]] [[Según su extensión]] [[Apuntes de Redes Locales]] [[1. Sobre el contenido]] [[Tabla de contenidos]] [[6. Arquitectura de redes]] [[2. ¿Qué es una red local?]] [[4. Elementos de una red]] [[3. Clasificación de las redes]]" modified="20191013111641792" title="$:/StoryList">
+<div list="[[Apuntes de Redes Locales]] [[1. Sobre el contenido]] [[Tabla de contenidos]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20191013064639654" list="$:/core/ui/MoreSideBar/All $:/core/ui/MoreSideBar/Recent $:/core/ui/MoreSideBar/Tags $:/core/ui/MoreSideBar/Missing $:/core/ui/MoreSideBar/Drafts $:/core/ui/MoreSideBar/Orphans $:/core/ui/MoreSideBar/Types $:/core/ui/MoreSideBar/System $:/core/ui/MoreSideBar/Shadows $:/core/ui/MoreSideBar/Explorer $:/core/ui/MoreSideBar/Plugins" modified="20191013064639654" title="$:/tags/MoreSideBar">
@@ -13907,7 +13907,7 @@ Eres libre de descargar tu propia versión de esta página, personalizarla a tu 
 <div created="20191013111137892" modified="20191013111141978" tags="[[Según su topología]]" title="Anillo">
 <pre></pre>
 </div>
-<div author="David Romero" created="20191013072428171" modified="20191013072628623" tags="" title="Apuntes de Redes Locales">
+<div author="David Romero" created="20191013072428171" modified="20191013121032640" tags="" title="Apuntes de Redes Locales">
 <pre>Una alternativa poco técnica y poco profesional</pre>
 </div>
 <div created="20191013111148823" modified="20191013111153582" tags="[[Según su topología]]" title="Árbol">
