--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/CentrarTabla</li>
 
+<li>$:/config/Navigation/openLinkFromInsideRiver</li>
+
 <li>$:/config/NewJournal/Title</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page</li>
@@ -653,6 +655,9 @@ Error message and password prompt
 <pre>.tc-tiddler-body table.centered{
 margin:0 auto;
 }</pre>
+</div>
+<div created="20191014212159501" modified="20191014212203811" title="$:/config/Navigation/openLinkFromInsideRiver">
+<pre>below</pre>
 </div>
 <div created="20190907220418589" modified="20190907220418754" title="$:/config/NewJournal/Title">
 <pre>DD MMM YYYY</pre>
@@ -9871,9 +9876,8 @@ margin:0 auto;
     }
 }</pre>
 </div>
-<div created="20190907220144667" modified="20191013072507129" title="$:/DefaultTiddlers">
-<pre>[[Apuntes de Redes Locales]]
-[[1. Sobre el contenido]]
+<div created="20190907220144667" modified="20191014212256715" title="$:/DefaultTiddlers">
+<pre>[[1. Sobre el contenido]]
 [[Tabla de contenidos]]
 </pre>
 </div>
@@ -10191,26 +10195,26 @@ margin:0 auto;
 <div created="20191012073752702" modified="20191012073800963" title="$:/state/tab--1760527228">
 <pre>$:/core/ui/TiddlerInfo/Tools</pre>
 </div>
-<div created="20190907234521526" modified="20191013062744412" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/StoryView</pre>
+<div created="20190907234521526" modified="20191014212238369" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
-<div created="20190907220431965" modified="20190929212355804" title="$:/state/tab--2112689675">
+<div created="20190907220431965" modified="20191014212245171" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20190907220440377" modified="20190907220442973" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Stylesheets</pre>
 </div>
-<div created="20190907220449851" modified="20191013072457002" title="$:/state/tab-1749438307">
+<div created="20190907220449851" modified="20191014212239905" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20190907221955795" modified="20190907234624147" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Shadows</pre>
 </div>
-<div created="20190907220257393" modified="20191013072606471" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20190907220257393" modified="20191014212121989" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
-<div created="20191012073346519" modified="20191012073415704" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
+<div created="20191012073346519" modified="20191014212233454" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
 </div>
 <div created="20190908163613341" modified="20190908163613341" title="$:/state/toc/Tabla de contenidos-2. Sistema binario-115813501">
 <pre>open</pre>
@@ -10293,7 +10297,7 @@ margin:0 auto;
 <div created="20190908082808684" modified="20190908082808684" title="$:/state/toc/Tabla de contenidos/Sistema binario-Contar en binario-115813501">
 <pre>open</pre>
 </div>
-<div list="[[Apuntes de Redes Locales]] [[1. Sobre el contenido]] [[Tabla de contenidos]]" title="$:/StoryList">
+<div created="20191014212122766" list="[[1. Sobre el contenido]] [[Tabla de contenidos]]" modified="20191014212252708" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20191013064639654" list="$:/core/ui/MoreSideBar/All $:/core/ui/MoreSideBar/Recent $:/core/ui/MoreSideBar/Tags $:/core/ui/MoreSideBar/Missing $:/core/ui/MoreSideBar/Drafts $:/core/ui/MoreSideBar/Orphans $:/core/ui/MoreSideBar/Types $:/core/ui/MoreSideBar/System $:/core/ui/MoreSideBar/Shadows $:/core/ui/MoreSideBar/Explorer $:/core/ui/MoreSideBar/Plugins" modified="20191013064639654" title="$:/tags/MoreSideBar">
