Actualizados apuntes TIC 1

--- a/Apuntes/TIC1/3/index.html
+++ b/Apuntes/TIC1/3/index.html
@@ -891,7 +891,7 @@ Los componentes fundamentales de una red son los dispositivos de red, el medio d
 <p>- Fácil de configurar.</p>
 </td>
 <td width="283">
-<p>- Solo puede conectar equipos de la misma subred.</p>
+<p>- El procesado y almacenamiento de datos introduce retardos.</p>
 <p>- Difícil su utilización en redes grandes.</p>
 </td>
 </tr>
