--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -518,7 +518,7 @@ except Exception as e:
         </section>
         <section class="bg-black aligncenter">
           <video class="background-video" autoplay loop muted poster="https://webslides.tv/static/images/peggy.jpg">
-            <source src="https://drive.google.com/file/d/1IQSEJgv6-jX55iNTT70x7po8O6yDyrFw/view?usp=sharing" type="video/mp4">
+            <source src="images/timelapse.mp4" type="video/mp4">
           </video>
           <!-- .wrap = container 1200px -->
           <div class="wrap size-50">
