--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -121,7 +121,7 @@
             <ul class="flexblock gallery">
               <li>
                 <a href="#">
-                  <img alt="Thumbnail " src="images/bannerlema.jpg">
+                  <img alt="Thumbnail " src="images/portada.jpeg">
                 </a>
               </li>
             </ul>
