--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -171,7 +171,7 @@
         <section>
           <!--.wrap = container 1200px -->
           <div class="wrap aligncenter">
-            <h2>Llevado a cabo por...</h2>
+            <h2>Llevado a cabo en...</h2>
             <p></p>
             <p></p>
             <p></p>
@@ -185,7 +185,7 @@
                   <img alt="Thumbnail " src="images/bachillerato.jpeg">
                 </a>
                 <div class="overlay">
-                  <h2>Bachillerato Ciencias</h2>
+                  <h2>Biología</h2>
                 </div>
               </li>
               <li>
@@ -193,7 +193,7 @@
                   <img alt="Thumbnail " src="images/electricidad.jpg">
                 </a>
                 <div class="overlay">
-                  <h2>Electricidad</h2>
+                  <h2>Tecnología</h2>
                 </div>
               </li>
               <li>
@@ -201,6 +201,14 @@
                   <img alt="Thumbnail " src="images/informatica.jpg">
                   <div class="overlay">
                     <h2>Informática</h2>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img alt="Thumbnail " src="images/informatica.jpg">
+                  <div class="overlay">
+                    <h2>Matemáticas</h2>
                   </div>
                 </a>
               </li>
