Add matematicas photos

--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -206,7 +206,7 @@
               </li>
               <li>
                 <a href="#">
-                  <img alt="Thumbnail " src="images/informatica.jpg">
+                  <img alt="Thumbnail " src="images/matematicas.jpeg">
                   <div class="overlay">
                     <h2>Matemáticas</h2>
                   </div>
