--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -254,6 +254,95 @@
               </li>
             </ul>
           </div>
+		  </section>
+          <!-- .end .wrap -->
+          <section>
+            <div class="wrap">
+              <h3><strong>Taxonomía</strong> de las plantas</h3>
+              <ul class="flexblock border">
+              <li>
+                <strong><center>Plantas sin flores</center></strong>
+              </li>
+              <li>
+               <strong> <center>Plantas con flores</center></strong>
+              </li>
+              </ul>
+              <ul class="flexblock border">
+              <li>
+                <strong><center>Musgos</center></strong>
+              </li>
+              <li>
+                <strong><center>Helechos</center></strong>
+              </li>
+              <li>
+                <strong><center>Gimnospermas</center></strong>
+              </li>
+              <li>
+               <strong> <center>Angiospermas</center></strong>
+              </li>
+              </ul>
+              <ul class="flexblock border">
+              <li>
+	            <figure>
+	              <img src="images/musgo.JPG" alt="Foto de musgo">
+			  </figure>
+              </li>
+              <li>
+  	            <figure>
+  	              <img src="images/helecho.JPG" alt="Foto de helecho">
+  			  </figure>
+              </li>
+              <li>
+  	            <figure>
+  	              <img src="images/gimnosperma.JPG" alt="Foto de gimnosperma">
+  			  </figure>
+              </li>
+              <li>
+ 	            <figure>
+ 	              <img src="images/angiosperma.JPG" alt="Foto de angiosperma">
+ 			  </figure>
+              </li>
+              </ul>
+            </div>
+            <!-- .end .wrap -->
+          
+        </section>
+        <section>
+          <div class="wrap">
+            <h3><strong>Funciones vitales</strong> de las plantas</h3>
+            <ul class="flexblock gallery">
+              <li>
+                <a href="#">
+                  <figure>
+                    <img alt="Thumbnail " src="images/reproduccion.jpeg">
+                    <figcaption>
+                      <h2>Reproducción</h2>
+                    </figcaption>
+                  </figure>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <figure>
+                    <img alt="Thumbnail" src="images/nutricion.jpeg">
+                    <figcaption>
+                      <h2>Nutrición</h2>
+                    </figcaption>
+                  </figure>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <figure>
+                    <img alt="Thumbnail" src="images/relacion.jpeg">
+                    <figcaption>
+                      <h2>Relación</h2>
+                    </figcaption>
+                  </figure>
+                </a>
+              </li>
+            </ul>
+          </div>
           <!-- .end .wrap -->
         </section>
 		  <section class="fullscreen">
