--- a/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
+++ b/Presentaciones-HTML/CEP-Monitorizacion-Planta/presentacion/index.html
@@ -269,10 +269,10 @@
               </ul>
               <ul class="flexblock border">
               <li>
-                <strong><center>Musgos</center></strong>
+                <strong><center>Briofitas</center></strong>
               </li>
               <li>
-                <strong><center>Helechos</center></strong>
+                <strong><center>Pteridofitas</center></strong>
               </li>
               <li>
                 <strong><center>Gimnospermas</center></strong>
@@ -345,15 +345,7 @@
           </div>
           <!-- .end .wrap -->
         </section>
-		  <section class="fullscreen">
-			  <center>
-		    <div class="embed">
-		      <video autoplay muted loop poster="image.jpg">
-		        <source src="images/timelapserapido.mp4" type="video/mp4">
-		      </video>
-		    </div>
-		</center>
-        </section>
+		 
         <section class="fullscreen">
           <div class="card-50">
             <figure>
@@ -536,8 +528,8 @@ except Exception as e:
           <!-- end .wrap-->
         </section>
         <section class="bg-black aligncenter">
-          <video class="background-video" autoplay loop muted poster="https://webslides.tv/static/images/peggy.jpg">
-            <source src="images/timelapse.mp4" type="video/mp4">
+          <video class="background-video" autoplay loop muted poster="images/fototimelapse.jpg">
+            <source src="images/timelapserapido.mp4" type="video/mp4">
           </video>
           <!-- .wrap = container 1200px -->
           <div class="wrap size-50">
