--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 								<li><a href="https://github.com/DavidLMS" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 								<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>-->
-								<li><a href="mailto:lms.davidromero@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:hola@davidlms.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; David Romero. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
