--- a/ArchivosBlog/BorradorDAW/index.html
+++ b/ArchivosBlog/BorradorDAW/index.html
@@ -24,9 +24,45 @@
   </svg>
 </div>
 
-<details open>
+<details>
   <summary>
-    Does this product have what I need?
+    Artículo 2. Identificación.
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <div class="thirteen wide column" data-reactid=".20ebtjfpqbc.1.0.1"><div class="ui segment" data-reactid=".20ebtjfpqbc.1.0.1.0"><div data-reactid=".20ebtjfpqbc.1.0.1.0.0"><pre style="white-space:pre-wrap;" data-reactid=".20ebtjfpqbc.1.0.1.0.0.0"><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$0">El título de Técnico Superior en Desarrollo de Aplicaciones Web queda identificado por los siguientes elementos:
+
+  Denominación: Desarrollo de Aplicaciones Web. </span><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$1"></ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$2">
+
+  Nivel: Formación Profesional de Grado Superior. </span><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$3"></ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$4">
+
+  Duración: 2000 horas.
+
+  </span><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$5">Equivalencia en créditos ECTS: 120.
+
+  </ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$6">Familia Profesional: Informática y Comunicaciones.
+
+  </span><del data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$7">Referente europeo</del><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$8">Ramas de conocimiento</ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$9">: </span><del data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$10">CINE-5b (Clasificación </del><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$11">Ciencias. Ingeniería y Arquitectura.
+
+  Referente en la Clasificación </ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$12">Internacional Normalizada de la </span><del data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$13">Educación)</del><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$14">Educación: P-5</ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$15">.</span><ins data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$16">5.4.</ins><span data-reactid=".20ebtjfpqbc.1.0.1.0.0.0.$17"> 
+
+  Nivel del Marco Español de Cualificaciones para la Educación Superior: Nivel 1 Técnico Superior.</span></pre></div></div></div></div></div>
+  
+</details>
+
+<details>
+
+  <summary>
+    Can I use it all the time?
+    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
+    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
+  </summary>
+  <p>Of course you can, we won't stop you.</p>
+</details>
+
+<details>
+  <summary>
+    Are there any restrictions?    
     <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
     <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
   </summary>
@@ -373,26 +409,6 @@
   − La verificación de la seguridad de acceso al sistema.
 
   − La elaboración de documentación técnica.</span></pre></div></div></div></div></div></div>
-  
-</details>
-
-<details>
-
-  <summary>
-    Can I use it all the time?
-    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
-    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
-  </summary>
-  <p>Of course you can, we won't stop you.</p>
-</details>
-
-<details>
-  <summary>
-    Are there any restrictions?    
-    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
-    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
-  </summary>
-  <p>Only your imagination my friend. Go forth!</p>
 </details>
 <!-- partial -->
   <script  src="./script.js"></script>
